--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"globals": "^15.14.0",
 		"husky": "^9.1.7",
 		"prettier": "^3.4.2",
+		"sass": "^1.83.1",
 		"typescript": "~5.6.2",
 		"typescript-eslint": "^8.19.1",
 		"vite": "^6.0.5"
