--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,6 +6,16 @@
 		"lib": ["ES2020", "DOM", "DOM.Iterable"],
 		"module": "ESNext",
 		"skipLibCheck": true,
+		"baseUrl": ".",
+		"paths": {
+			"@/*": ["src/*"],
+			"@assets/*": ["src/Assets/*"],
+			"@features/*": ["src/Features/*"],
+			"@services/*": ["src/Services/*"],
+			"@views/*": ["src/Views/*"],
+			"@utils/*": ["src/Utils/*"],
+			"@variables": ["src/App/Styles/_variables.scss"]
+		},
 
 		/* Bundler mode */
 		"moduleResolution": "bundler",
