--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -12,6 +12,16 @@
 		"isolatedModules": true,
 		"moduleDetection": "force",
 		"noEmit": true,
+"baseUrl": "./",
+		"paths": {
+			"@/*": ["src/*"],
+			"@assets/*": ["src/Assets/*"],
+			"@features/*": ["src/Features/*"],
+			"@utils/*": ["src/Utils/*"],
+			"@services/*": ["src/Services/*"],
+			"@views/*": ["src/Views/*"],
+			"@variables": ["src/App/Styles/_variables"]
+		},
 
 		/* Linting */
 		"strict": true,
