--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
 	},
 	"dependencies": {
 		"react": "^18.3.1",
-		"react-dom": "^18.3.1"
+		"react-dom": "^18.3.1",
+		"react-router-dom": "^7.1.1"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.17.0",
 		"@types/react": "^18.3.18",
 		"@types/react-dom": "^18.3.5",
+		"@types/react-router-dom": "^5.3.3",
 		"@typescript-eslint/eslint-plugin": "^8.19.1",
 		"@typescript-eslint/parser": "^8.19.1",
 		"@vitejs/plugin-react-swc": "^3.5.0",
@@ -34,6 +36,7 @@
 		"sass": "^1.83.1",
 		"typescript": "~5.6.2",
 		"typescript-eslint": "^8.19.1",
-		"vite": "^6.0.5"
+		"vite": "^6.0.5",
+		"vite-plugin-svgr": "^4.3.0"
 	}
 }
