--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,7 +6,7 @@
 		"lib": ["ES2020", "DOM", "DOM.Iterable"],
 		"module": "ESNext",
 		"skipLibCheck": true,
-		"baseUrl": ".",
+		"baseUrl": "./",
 		"paths": {
 			"@/*": ["src/*"],
 			"@assets/*": ["src/Assets/*"],
