--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.17.0",
+		"@types/node": "^22.10.6",
 		"@types/react": "^18.3.18",
 		"@types/react-dom": "^18.3.5",
 		"@types/react-router-dom": "^5.3.3",
