--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"prepare": "husky"
 	},
 	"dependencies": {
+		"@react-three/drei": "^9.121.0",
+		"@react-three/fiber": "^8.17.12",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-router-dom": "^7.1.1"
