--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,3 @@
 {
-	"rewrites": [{ "source": "/(.*)", "destination": "/" }],
-	"builds": [
-		{
-			"src": "src/assets/**/*",
-			"use": "@vercel/static"
-		}
-	]
+	"rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
 }
