--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,15 +1,15 @@
 {
 	"compilerOptions": {
 		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-		"target": "ES2020",
+		"target": "ES2023",
 		"useDefineForClassFields": true,
-		"lib": ["ES2020", "DOM", "DOM.Iterable"],
+		"lib": ["ES2023", "DOM", "DOM.Iterable"],
 		"module": "ESNext",
 		"skipLibCheck": true,
 		"baseUrl": "./",
 		"paths": {
 			"@/*": ["src/*"],
-			"@assets/*": ["src/Assets/*"],
+			"@assets/*": ["src/assets/*"],
 			"@features/*": ["src/Features/*"],
 			"@services/*": ["src/Services/*"],
 			"@views/*": ["src/Views/*"],
