--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -32,5 +32,5 @@
 		"noFallthroughCasesInSwitch": true,
 		"noUncheckedSideEffectImports": true
 	},
-	"include": ["src"]
+	"include": ["src", "vite.config.ts"]
 }
