--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
 	"dependencies": {
 		"@react-three/drei": "^9.121.0",
 		"@react-three/fiber": "^8.17.12",
+		"@reduxjs/toolkit": "^2.5.0",
 		"lucide-react": "^0.471.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-redux": "^9.2.0",
 		"react-router-dom": "^7.1.1",
 		"three": "^0.172.0"
 	},
