--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@react-three/drei": "^9.121.0",
 		"@react-three/fiber": "^8.17.12",
 		"@reduxjs/toolkit": "^2.5.0",
+		"framer-motion": "^12.0.0",
 		"lucide-react": "^0.471.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
