--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
 	"name": "genetiq-app",
 	"private": true,
 	"version": "0.0.0",
-	"type": "module",
+	"type": "commonjs",
 	"scripts": {
-		"dev": "vite",
+		"dev": "concurrently \"npm run start-server\" \"npm run start-front\" --kill-others --kill-others-on-fail",
 		"build": "tsc -b && vite build",
+		"start-front": "vite",
+		"start-server": "node server/index.js --watch server/*",
 		"lint": "eslint .",
 		"format": "prettier --write .",
 		"preview": "vite preview",
@@ -15,11 +17,19 @@
 		"@react-three/drei": "^9.121.0",
 		"@react-three/fiber": "^8.17.12",
 		"@reduxjs/toolkit": "^2.5.0",
+		"bcrypt": "^5.1.1",
+		"concurrently": "^9.1.2",
+		"cors": "^2.8.5",
+		"dotenv": "^16.4.7",
+		"express": "^5.1.0",
+		"mongoose": "^8.13.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-redux": "^9.2.0",
 		"react-router-dom": "^7.1.1",
 		"react-toastify": "^11.0.3",
+		"request": "^2.88.2",
+		"socket.io": "^4.8.1",
 		"three": "^0.172.0"
 	},
 	"devDependencies": {
