--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
 	"version": "0.0.0",
 	"type": "commonjs",
 	"scripts": {
-		"start": "concurrently \"npm run start-server\" \"npm run start-front\" --kill-others --kill-others-on-fail",
+		"start": "concurrently \"node server/index.js --watch server/*\" \"vite\" --kill-others --kill-others-on-fail",
 		"build": "tsc -b && vite build",
-		"start-front": "vite",
-		"start-server": "node server/index.js --watch server/*",
 		"lint": "eslint .",
 		"format": "prettier --write .",
 		"preview": "vite preview",
