--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.7",
 		"express": "^5.1.0",
+		"i18next": "^25.6.0",
 		"mongoose": "^8.13.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-i18next": "^16.0.1",
 		"react-redux": "^9.2.0",
 		"react-router-dom": "^7.1.1",
 		"react-toastify": "^11.0.3",
